# andy-django-boilerplate

./: .dockerignore  .env.example  .tool-versions  Dockerfile  Makefile  PROMPT.md  Procfile.dev  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml
accounts/: admin.py  forms.py  tests.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  tests.py  urls.py
pages/: views.py
