[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andy-django-boilerplate"
version = "0.1.0"
description = "A Django boilerplate project configured for Docker-based development."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.0",
    "Django==5.1.7",
    "sqlparse==0.5.4",
    "typing_extensions==4.15.0",
    "psycopg2-binary==2.9.11",
    "django-debug-toolbar==6.1.0",
    "environs[django]==14.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.9",
]

[tool.setuptools.packages.find]
include = [
    "django_project",
    "accounts",
    "pages",
]

[tool.ruff]
ignore = []
line-length = 150
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-django
    "DJ",
    # flake8-pytest-style
    "PT",
]
